fixed input, guess count logic and broken css

--- a/Adrian/wk02/5-fri/cake_pudding/bootstrap/bootstrap/css/bootstrap.css
+++ b/Adrian/wk02/5-fri/cake_pudding/bootstrap/bootstrap/css/bootstrap.css
@@ -1,4 +1,11 @@
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+html {  
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -14,6 +21,7 @@ body {
 
 .headParagraph {
   display: inline;
+  font-size: 0.5em;
 }
 
 article,
@@ -1219,12 +1227,13 @@ h1 {
 }
 h2 {
   margin-top: 0;
-  font-size: 2em;
+  font-size: 1em;
   white-space: nowrap;
   display: inline-block;
+  max-width: 80%
 }
 h3 {
-  font-size: 2em;
+  font-size: 1em;
   display: inline-block;
 }
 h4 {
@@ -1277,6 +1286,7 @@ main {
   padding: 1.2em;
   width: 70%;
   margin: 0 auto;
+ 
 }
 
 @media (min-width: 768px) {
@@ -1382,8 +1392,8 @@ a.bg-danger:hover {
   background-color: #000000;
 }
 .page-header {
-  padding-bottom: 9px;
-  margin: 40px 0 20px;
+/*  padding-bottom: 0.4em;
+*/  margin: 1em 0 0.7em;
   border-bottom: 2px solid #bbbbbb;
 }
 ul,
@@ -2667,7 +2677,7 @@ fieldset[disabled] .checkbox label {
 .input-sm {
   height: 2em;
   padding: 0 1em;
-  font-size: 18px;
+  font-size: 0.6em;
   line-height: 20px;
   display: block;
   margin: 2em auto;
